--- a/src/whiskers.scss
+++ b/src/whiskers.scss
@@ -52,3 +52,29 @@
     }
   }
 }
+
+@mixin modal($selector, $height, $width) {
+  #{$selector} {
+    display: inline-block;
+    > :last-child {
+      left: 0px;
+      top: 0;
+      position: absolute;
+      display: none;
+      align-content: center;
+      justify-content: center;
+      height: 100%;
+      width: 100%;
+      > * {
+        z-index: 1455;
+        height: $height;
+        width: $width;
+      }
+    }
+    &.show {
+      > :last-child {
+        display: grid;
+      }
+    }
+  }
+}
