--- a/src/whiskers.scss
+++ b/src/whiskers.scss
@@ -70,35 +70,39 @@
   #{$selector} {
     display: inline-block;
 
-    > :last-child {
-      left: 0px;
-      top: 0;
-      position: absolute;
-      display: none;
-      align-content: center;
-      justify-content: center;
-      height: 100%;
-      width: 100%;
+    .modal {
+      background-color: rgba(0, 0, 0, 0.4);
 
-      >* {
-        z-index: 1455;
-        height: $height;
-        min-width: 300px;
-        width: $width;
-      }
-    }
-
-    &.show {
       > :last-child {
-        display: grid;
-        grid-template-rows: repeat(auto-fit, 48px);
+        left: 0px;
+        top: 0;
+        position: absolute;
+        display: none;
+        align-content: center;
+        justify-content: center;
+        height: 100%;
+        width: 100%;
 
-        > :nth-child(odd) {
-          @include set-colors($bg1, $c1);
+        >* {
+          z-index: 1455;
+          height: $height;
+          min-width: 300px;
+          width: $width;
         }
+      }
 
-        > :nth-child(even) {
-          @include set-colors($bg2, $c2);
+      &.show {
+        > :last-child {
+          display: grid;
+          grid-template-rows: repeat(auto-fit, 48px);
+
+          > :nth-child(odd) {
+            @include set-colors($bg1, $c1);
+          }
+
+          > :nth-child(even) {
+            @include set-colors($bg2, $c2);
+          }
         }
       }
     }
